2011-05-31  Tommy Widenflycht  <tommyw@google.com>

Reviewed by Tony Gentilcore.

        Fix getUserMedia callback bindings for JSC.
        https://bugs.webkit.org/show_bug.cgi?id=60174

        This patch initializes the exception code variable to 0.

        Test: fast/dom/MediaStream/argument-types.html

        * bindings/js/JSNavigatorCustom.cpp:
        (WebCore::JSNavigator::webkitGetUserMedia):

Canonical link: https://commits.webkit.org/77205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87725 268f45cc-cd09-0410-ab3c-d52691b4dbfc